# xgb_complex_features

./: .context-profile.yml  .gitignore  Makefile  README.md  agents.md  prd.md  pyproject.toml  requirements.txt  todo.md
configs/: exp_all_levels_10k.yaml  exp_default.yaml  smoke.yaml
logs/agents/agent_logs/: 2025-12-13_codex.md  2025-12-14_codex_onboarding.md  2025-12-14_codex_paper_draft.md  2025-12-14_iteration_cleanup.md  2025-12-16_codex_level_framing_update.md  2025-12-16_codex_level_redundancy_note.md  2025-12-16_codex_methodology_review.md  2025-12-16_codex_onboard.md  2025-12-17_codex_coding_agent_response.md  2025-12-17_codex_level_framework_update.md  2025-12-17_codex_paper_feedback_memo.md  2025-12-20_codex_iteration_cleanup.md  2025-12-20_codex_onboard.md  2025-12-20_codex_panel_stability_stats.md  2025-12-20_codex_paper_bundle_panel_stability_update.md  2025-12-20_codex_review_v5_vs_v2.md  2025-12-20_codex_v5_feedback_bundle.md  2025-12-20_codex_v7_fixed_review.md  2025-12-20_codex_v7_paper_review.md  2025-12-20_codex_v8_review.md
paper_draft/2025-12-14_110315/: coding_agent_response.md  feedback_to_paper_writing_agent.md  writedown.md  writedown_level_framing_update.md  writedown_level_redundancy_note.md
paper_draft/2025-12-20_171247_panel_stability_update/: README.md  instructions_for_writer_agent.md  xgb_invariant_features_updated_v8_fixed.tex
paper_draft/v5_feedback_bundle_2025-12-20/: coding_agent_feedback_on_v5.md
src/xgb_complex_features/: __main__.py  config.py  utils.py
xgb_complex_features/: __init__.py
(+26 files in other folders)
